[package]
name = "derive_builder"
version = "0.0.0"
edition = "2021"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
# TODO
quote = "1.0.18"
syn = {version = "1.0.91",features=["extra-traits"]}
proc-macro2 = "1.0.37"